# ai-personal-assistant-app

./: .gitignore  README.md  components.d.ts  index.html  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/android/: customizations.gradle  debug.keystore
.github/workflows/: release.yml
src/: App.vue  main.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/image/: client.rs  types.rs
src-tauri/src/llm/: client.rs  mod.rs  types.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/scheduler/: mod.rs  report.rs
src-tauri/src/sync/: images.rs  manifest.rs  mod.rs  signaling.rs  snapshot.rs  webdav.rs
src/api/: asset.ts  chat.ts  image.ts  kv.ts  llm.ts  notify.ts  report.ts  sync.ts  weather-location.ts  weather.ts
src/components/: AppHeader.vue  AsyncImage.vue  BottomTabBar.vue  ImagePreview.vue  MarkdownRenderer.vue  MonthCalendar.vue  SideNav.vue
src/composables/: useHolidays.ts  useLayoutMode.ts
src/db/: index.ts  repos.ts  schema.ts
src/router/: index.ts
src/stores/: app.ts  chat-background.ts  chat.ts  event.ts  image-config.ts  llm-config.ts  notes.ts  search.ts  sync.ts  theme.ts  todo.ts  weather-settings.ts
src/styles/: global.css
src/views/: Calendar.vue  Chat.vue  DailyReport.vue  Dashboard.vue  ImageGen.vue  More.vue  Notes.vue  (+3 more)
worker/: README.md  package.json  tsconfig.json  wrangler.toml
(+14 files in other folders)
