[package]
name = "ai-personal-assistant-app"
version = "0.0.18"
description = "个人 AI 助手 App"
authors = ["wanghao"]
edition = "2021"

[lib]
name = "ai_personal_assistant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
